2014-09-02  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* base-math/extendsfsd.c : Started to use _Decimal32 in the division
	of the mantissa to fix extendsfsd in x86.

	* base-math/truncdddf.c : Fixed the comparison for overflow.

2014-07-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac (cxxdecimal): Add check for std::decimal compiler
	support.
	* Makefile.in (cxxdecimal): Only run C++ tests if std::decimal
	compiler supports is present.

	* libdecnumber/decUInt128.h (uQuadInitFromUInt): Remove braced-groups
	to avoid compile wwarnings with -pedantic.
	(uQuadToUInt): Likewise.
	(uQuadAddQuad): Likewise.
	(uQuadMulUInt): Likewise.
	(uQuadModUInt): Likewise.
	(uQuadDivUInt): Likewise.

	* config.h.in [HAVE_UINT128_T]: Add to define if compiler supports
	128-bits integer types.
	* libdecnumber/config.in [HAVE_UINT128_T]: Likewise.
	* configure.ac: Add check to find if compiler supports 128-bits
	integer types.
	* libdecnumber/configure.ac: Likewise.
	* libdecnumber/decUInt128.h [__SIZEOF_INT128__]: Use HAVE_UINT128_T
	instead.
	* sysdeps/bid/bid-uint128.h [__SIZEOF_INT128__]: Likewise.
	* tests/test-left_justify.c [__SIZEOF_INT128__]: Likewise.

	* configure.ac [AC_PREREQ]: Remove definition.
	[user_headers]: Likewise.
	[glibc_headers]: Likewise.
	* libdecnumber/configure.ac [AC_PREREQ]: Likewise.

	* libdecnumber/decUInt128.h: New file: support header to set compiler
	support for 128-bits integer or multiprecision support.
	* sysdeps/bid/bid-uint128.h: New file: likewise.
	* libdecnumber/mini-gmp.c: New file: multiprecision implementation to
	enable 128-bits integer operation for toolchain that does not support
	compiler builtins.
	* libdecnumber/mini-gmp.h: New file: likewise.
	* libdecnumber/decNumberLocal.h (Quad): Remove definition.
	(uQuad): Likewise.
	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_128): Use macros
	on 128-bits operations to select over multiprecision or compiler
	builtin support.